# sliding_puzzle

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: deploy.yml
assets/: bridge.worker-Drd6tfO2.js  index-AQl2g6uK.js  index-DCiwNFp9.css  lib_bg-DuN4psD6.wasm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ThemeContext.tsx  bridge.worker.ts  index.css
frontend/src/components/: ControlPanel.css  ControlPanel.tsx  ProgressPanel.css  ProgressPanel.tsx  PuzzleBoard.css  PuzzleBoard.tsx  SizeSlider.css  SizeSlider.tsx  SolutionPane.css  SolutionPane.tsx  SolverPanel.css  SolverPanel.tsx  SortableTile.tsx  Stopwatch.css  Stopwatch.tsx  ThemeRadio.css  ThemeRadio.tsx  Tile.module.css  Tile.tsx
frontend/src/hooks/: useBoard.ts  useSolution.ts  useStopwatch.ts  useWorker.ts
frontend/src/utils/: puzzleUtils.ts
src/: lib.rs  main.rs
