[package]
name = "sliding_puzzle"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.94"
rand = "0.10.0"
getrandom = {version = "0.4.2", features = ["wasm_js"]}
wasm-bindgen = "0.2.116"
fastrand = { version = "2.3.0", features = ["js"] }
rustc-hash = "2.1.2"
phf_codegen = "0.13.1"
phf = "0.13.1"

[build-dependencies]
rustc-hash = "2.1.2"
phf_codegen = "0.13.1"

[lints.clippy]
pedantic = "warn"
